build/log/idf_py_stderr_output_1579133
Command: make -j 18 all
In file included from /home/levi/CLionProjects/maestro/main/socket_helper.c:1:
/home/levi/CLionProjects/maestro/main/socket_helper.h:5:34: error: unknown type name 'size_t'
    5 | void SocketListen(char *message, size_t message_size);
      |                                  ^~~~~~
/home/levi/CLionProjects/maestro/main/socket_helper.h:1:1: note: 'size_t' is defined in header '<stddef.h>'; this is probably fixable by adding '#include <stddef.h>'
  +++ |+#include <stddef.h>
    1 | #ifndef MAESTRO_SOCKET_HELPER_H
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:132: esp-idf/main/CMakeFiles/__idf_main.dir/socket_helper.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6639: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
